2001-04-21  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Volumes/render_funcs_include.c: 
	* Volumes/call_rend_f_include.c: Replace all occurances of "long"
	or "LONG" by "int" and "INT".  Needed for upcoming MINC release
	based on netcdf-3.x.

	* Documentation/doxygen.config.in: Tweaked for better C-code
	documentation.

2001-04-02  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Makefile.am (SUBDIRS): Descend into Documentation subdir.
	* Documentation/Makefile.am: New.

	* Documentation/doxygen.config.in: New.  Generates config
	file for use with the doxygen document generator.

	* tools/ascii_binary.c: New.  Copied from
	~david/Source/Batch_processing.

2001-03-27  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Check for PPM library in -lppm
	(also requires -lpgm -lpbm to link).

2001-03-02  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* tools/make_mesh_map.c: New.  Takes two BICOBJ files each 
	containing a mesh, and generates a PLY file where each
	vertex has two sets of coordinate values.

2001-02-12  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* tools/bicobj2ply.c: New.  Convert BIC ".obj" file to PLY format.
	See http://www.cc.gatech.edu/projects/large_models/ply.html.

	* tools/ply.c:
	* tools/ply.h: New.  Routines for reading and writing PLY, from
	gatech's "plytools" package, obtained at the above website.
	Changed to declare equal_strings() statically, as it conflicts
	with function in "volume_io".
	
2001-02-09  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* tools: New directory.

	* tools/bicobj2oogl.c: New.  Convert BIC ".obj" file to
	OOGL format, for viewing with Geomview.

2001-02-06  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* Images/rgb_io_ppm.c (input_rgb_file): Added code to read
	PPM images.  This is completely untested, so left inactive.

2001-02-05  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* README.release: New.  Recipe for creating a new release.
