@@ -1,4 +1,4 @@
 *.log *.aux *.dvi *.toc
-Makefile.in
+Makefile.in Makefile
 doxygen.config
 html
