@@ -1,6 +1,7 @@
 New in Release 1.3.6 (PRERELEASE VERSION)
 
-* New tools: ascii_binary.
+* New tool: ascii_binary.
+* New optional second argument to bicobj2oogl.
 * Requires MINC 0.8 to compile.
 
 New in Release 1.3.5
