@@ -1,3 +1,8 @@
+2001-06-05  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
+
+	* tools/bicobj2oogl.c: Allow optional second argument to specify
+	output file name.
+
 2001-04-21  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>
 
 	* Volumes/render_funcs_include.c: 
